2.52.4 [RX Link] no longer wraps

--- a/src/css/style.less
+++ b/src/css/style.less
@@ -140,10 +140,12 @@ a.hover:hover {
     }
     .link,
     .link a {
+        white-space: nowrap;
         color: #ff0000;
     }
     .inactive,
     .inactive a {
+        white-space: nowrap;
         color: #888;
     }
     .links {
